--- a/demos/21-autoplay.html
+++ b/demos/21-autoplay.html
@@ -83,7 +83,8 @@
         spaceBetween: 30,
         centeredSlides: true,
         autoplay: 2500,
-        autoplayDisableOnInteraction: false
+        autoplayDisableOnInteraction: false,
+        loop: true
     });
     </script>
 </body>
